// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignUpForm /> styled components should match the stored <ButtonWrapper /> snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 10px;
}

<div
  className="c0"
/>
`;

exports[`<SignUpForm /> styled components should match the stored <CancelButton /> snapshot 1`] = `
.c0 {
  color: white;
  border: 1px solid #679daa;
  margin-right: 20px;
}

<button
  className="c0 btn btn-primary"
  disabled={false}
  type="button"
/>
`;

exports[`<SignUpForm /> styled components should match the stored <FormLabel /> snapshot 1`] = `
.c0 {
  color: white;
}

<label
  className="c0 form-label"
/>
`;

exports[`<SignUpForm /> styled components should match the stored <InputError /> snapshot 1`] = `
.c0 {
  color: lightgrey;
}

<span
  className="c0"
/>
`;

exports[`<SignUpForm /> styled components should match the stored <SignUpButton /> snapshot 1`] = `
.c0 {
  color: white;
}

<button
  className="c0 btn btn-primary"
  disabled={false}
  type="button"
/>
`;

exports[`<SignUpForm /> styled components should match the stored <StyledForm /> snapshot 1`] = `
.c0 {
  padding: 40px;
  border-radius: 5px;
  width: 400px;
}

<form
  className="c0"
/>
`;

exports[`<SignUpForm /> styled components should match the stored <Title /> snapshot 1`] = `
.c0 {
  font-size: 2em;
  font-style: bold;
  padding-bottom: 10px;
}

<div
  className="c0"
/>
`;
